feat(event): add "other" event type

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -41,7 +41,8 @@
 		"CONFERENCE": "Conference",
 		"WORKSHOP": "Workshop",
 		"FORMATION": "Formation",
-		"MEETING": "Meeting"
+		"MEETING": "Meeting",
+		"OTHER": "Other"
 	},
 	"free": "Free",
 	"event": "Event",
