--- a/src/translations/fr/notification.json
+++ b/src/translations/fr/notification.json
@@ -4,6 +4,7 @@
   "see_more": "Voir tout",
   "in_menu": {
     "NEW_STUDENT_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication.",
-    "NEW_CLUB_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication."
+    "NEW_CLUB_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication.",
+    "NEW_GROUP_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication dans le groupe <bold>{{group_name}}</bold>."
   }
 }
