fix(student-preview): impl student page (no social links & photos)

--- a/src/translations/en/user.json
+++ b/src/translations/en/user.json
@@ -3,6 +3,7 @@
   "no-bio": "No biography",
   "clubs": "Clubs",
   "photos": "Pictures",
+  "no_club": "{{user}} isn't in a member of any club.",
   "not-specified": "Not specified",
   "no-mail": "No mail specified",
   "no-phone": "No phone specified",
