--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -2,6 +2,7 @@
   "error": "Sorry, we've encountered an error, try again later.",
   "end": "You've reached the end !",
   "empty": "Nothing to display",
+  "posts": "Publications",
   "empty_feed": "No posts on this feed yet, come back later !",
   "filters": "Filters",
   "create_feed": "Create a feed",
