--- a/src/translations/fr/notification.json
+++ b/src/translations/fr/notification.json
@@ -1,5 +1,6 @@
 {
   "notifications": "Notifications",
+  "no_notifications": "Tu n'as aucune notification",
   "long_ago": "Il y a longtemps",
   "see_more": "Voir tout",
   "in_menu": {
