feat(post): refactor component + add homepage force and pinned

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -10,6 +10,8 @@
 	"post_pinned": "Post pinned !",
 	"post_unpinned": "Post unpinned !",
 	"planned_for": "Planned for",
+	"homepage_forced": "",
+	"homepage_pin": "Superpin",
 	"pin": "Pin",
 	"unpin": "Unpin",
 	"posted_in_group": "Posted in the \"{{group}}\" group",
