--- a/src/translations/fr/post.json
+++ b/src/translations/fr/post.json
@@ -10,6 +10,8 @@
 	"post_pinned": "Post épinglé !",
 	"post_unpinned": "Post désépinglé !",
 	"planned_for": "Prévu pour ",
+	"homepage_forced": "",
+	"homepage_pin": "Superpin",
 	"pin": "Épingler",
 	"unpin": "Désépingler",
 	"posted_in_group": "Posté dans le groupe \"{{group}}\"",
