feat(post): hompageForced & homepagePinned visible feedback

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -10,7 +10,7 @@
 	"post_pinned": "Post pinned !",
 	"post_unpinned": "Post unpinned !",
 	"planned_for": "Planned for",
-	"homepage_forced": "",
+	"homepage_forced": "Super visibility",
 	"homepage_pin": "Superpin",
 	"pin": "Pin",
 	"unpin": "Unpin",
