--- a/src/translations/fr/post.json
+++ b/src/translations/fr/post.json
@@ -10,7 +10,7 @@
 	"post_pinned": "Post épinglé !",
 	"post_unpinned": "Post désépinglé !",
 	"planned_for": "Prévu pour ",
-	"homepage_forced": "",
+	"homepage_forced": "Super visibilité",
 	"homepage_pin": "Superpin",
 	"pin": "Épingler",
 	"unpin": "Désépingler",
