--- a/src/translations/fr/notification.json
+++ b/src/translations/fr/notification.json
@@ -3,6 +3,10 @@
   "no_notifications": "Tu n'as aucune notification",
   "long_ago": "Il y a longtemps",
   "see_more": "Voir tout",
+  "notif_are_here": "Les notifications sont là !",
+  "receive_here": "Recevez-les directement sur votre appareil !",
+  "refuse": "Refuser",
+  "accept": "Accepter",
   "in_menu": {
     "NEW_STUDENT_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication.",
     "NEW_CLUB_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication.",
