feat(media): custom media error component

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -76,5 +76,6 @@
   },
   "no_targets": "No targets (Public event)",
   "media_processing": "Media is being processed",
+  "media_error": "Processing error",
   "retry": "Retry"
 }
