--- a/src/translations/en/first-follow.json
+++ b/src/translations/en/first-follow.json
@@ -1,6 +1,6 @@
 {
   "follow_clubs": "Follow some clubs",
-  "why_follow": "You must follow the clubs to see their posts in your feed.",
+  "why_follow": "You must follow a club to see its posts in your feed.",
   "why_follow_small": "You'll see their posts in your feed",
   "next": "Next",
   "follow_needed": "Follow at least {{clubs}} more clubs"
