feat(post-links): add post link support

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -22,5 +22,8 @@
 		"edited": "Update post",
 		"deleted": "Post deleted"
 	},
-	"just_now": "Just now"
+	"just_now": "Just now",
+	"selected_post": "Selected post",
+	"copy_link": "Share",
+	"copied": "Linked copied into clipboard !"
 }
