Discovery spelling mistakes

--- a/src/translations/fr/discovery.json
+++ b/src/translations/fr/discovery.json
@@ -12,7 +12,7 @@
     },
     {
       "title": "Informer",
-      "description": "Reste au courant des dernières informations sur toutes la vie de l'ISEP, qu'il s'agisse d'un évènement, d'un club ou tout ce qui peut-être relié à l'ISEP. Abonne-toi aux feed qui t'intéresse pour ne pas en perdre une miette"
+      "description": "Reste au courant des dernières informations sur toutes la vie de l'ISEP, qu'il s'agisse d'un évènement, d'un club ou tout ce qui peut-être relié à l'ISEP. Abonne-toi aux feeds qui t'intéressent pour ne pas en perdre une miette"
     }
   ],
   "placeholder_search": "Rechercher un(e) ami(e)...",
