feat(club-events): add events tab to clubs & latest galleries sidebar

--- a/src/translations/en/club.json
+++ b/src/translations/en/club.json
@@ -1,6 +1,7 @@
 {
   "posts": "Posts",
   "galleries": "Galleries",
+  "events_galleries": "Latest galleries",
   "members": "Members",
   "about": "About",
   "pictures": "pictures",
