--- a/src/translations/fr/club.json
+++ b/src/translations/fr/club.json
@@ -1,5 +1,7 @@
 {
   "galleries": "Galeries",
+  "events_galleries": "Galeries récentes",
+  "events": "Événements",
   "members": "Membres",
   "about": "Découvrir",
   "pictures": "photos",
