--- a/src/translations/en/club.json
+++ b/src/translations/en/club.json
@@ -1,5 +1,6 @@
 {
   "posts": "Posts",
+  "update_available": "An update is available. Reload the page activate it.",
   "galleries": "Galleries",
   "events_galleries": "Latest galleries",
   "members": "Members",
