--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -1,5 +1,6 @@
 {
   "error": "Désolé, y'a eu une erreur, réessaye plus tard",
+  "update_available": "Une mise à jour est disponible. Rafraichissez la page pour l'activer.",
   "end": "Vous avez tout visionné !",
   "empty": "Rien à afficher",
   "posts": "Publications",
