--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -1,6 +1,7 @@
 {
   "error": "Sorry, we've encountered an error, try again later.",
   "end": "You've reached the end !",
+	"see_more": "See more...",
   "empty": "Nothing to display",
   "posts": "Publications",
   "empty_feed": "No posts on this feed yet, come back later !",
