feat(explore): impl last explore

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -2,6 +2,7 @@
   "error": "Sorry, we've encountered an error, try again later.",
   "end": "You've reached the end !",
 	"see_more": "See more...",
+  "explore": "Explore",
   "empty": "Nothing to display",
   "posts": "Publications",
   "empty_feed": "No posts on this feed yet, come back later !",
