--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -2,6 +2,7 @@
   "error": "Désolé, y'a eu une erreur, réessaye plus tard",
   "update_available": "Une mise à jour est disponible. Rafraichissez la page pour l'activer.",
 	"see_more": "Voir plus...",
+  "explore": "Explorer",
   "end": "Vous avez tout visionné !",
   "empty": "Rien à afficher",
   "posts": "Publications",
