fix(post): fix video posts edition

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -25,5 +25,6 @@
 	"just_now": "Just now",
 	"selected_post": "Selected post",
 	"copy_link": "Share",
-	"copied": "Linked copied into clipboard !"
+	"copied": "Linked copied into clipboard !",
+	"video_not_editable": "Videos are not editable."
 }
