fix(maintenance): enhanced no co

--- a/src/translations/en/error.json
+++ b/src/translations/en/error.json
@@ -12,7 +12,7 @@
     "You found a bug (source: shitty code)"
   ],
   "maintenance": {
-    "title":"iseplife is under maintenance",
+    "title":"We can't connect to our servers",
     "message": [
       "We are upgrading the website for Paris 2024 Olympics, be patient...",
       "Maintenance in progress, stop staying in front of your computer real life is outside !",
