--- a/src/translations/fr/error.json
+++ b/src/translations/fr/error.json
@@ -13,7 +13,7 @@
     "Un problème a été rencontré (source: code de merde)"
   ],
   "maintenance": {
-    "title":"iseplife est en cours de maintenance",
+    "title":"Aucune connexion aux serveurs",
     "message": [
       "Nous préparons le site pour les JO de Paris 2024, un peu de patience...",
       "Maintenance en cours, décroche toi de ton écran la vraie vie c'est dehors hein",
