feat(event): no location

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -61,6 +61,6 @@
 		"today": "Today",
 		"before": "It was "
 	},
-	"online": "Online",
+	"no_position": "No location",
 	"participate": "Participate"
 }
