feat(report): add report system

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -26,5 +26,7 @@
 	"selected_post": "Selected post",
 	"copy_link": "Share",
 	"copied": "Linked copied into clipboard !",
-	"video_not_editable": "Videos are not editable."
+	"video_not_editable": "Videos are not editable.",
+	"report": "Report",
+	"reported": "You just reported this post to the administrators, it will be reviewed in 24h"
 }
