--- a/src/translations/fr/post.json
+++ b/src/translations/fr/post.json
@@ -26,5 +26,7 @@
 	"selected_post": "Publication sélectionnée",
 	"copy_link": "Partager",
 	"copied": "Lien copié dans le presse papier !",
-	"video_not_editable": "Les vidéos ne peuvent pas être modifiées."
+	"video_not_editable": "Les vidéos ne peuvent pas être modifiées.",
+	"report": "Signaler",
+	"reported": "Vous avez bien signalé ce post, il sera audité sous 24h."
 }
