feat(block): add block option

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -84,5 +84,7 @@
   "cgu_deny": "Refuser",
   "cgu_open": "Consulter",
   "cgu_text": "To use IsepLife, you need to accept our EULA.",
-  "cgu": "EULA"
+  "cgu": "EULA",
+  "block": "Block",
+  "unblock": "Unlock"
 }
