feat(login): add use moodle logins mention

--- a/src/translations/en/login.json
+++ b/src/translations/en/login.json
@@ -1,5 +1,6 @@
 {
   "id": "ISEP id",
   "password": "password",
-  "submit": "Log in "
+  "submit": "Log in ",
+  "use_moodle": "Please use your ISEP Moodle account credentials"
 }
