--- a/src/translations/fr/login.json
+++ b/src/translations/fr/login.json
@@ -1,5 +1,6 @@
 {
   "id": "identifiant ISEP",
   "password": "mot de passe",
-  "submit": "Se connecter"
+  "submit": "Se connecter",
+  "use_moodle": "Utilisez vos identifiants Moodle"
 }
