refactor(error): fix error message displaying

--- a/src/translations/en/error.json
+++ b/src/translations/en/error.json
@@ -21,7 +21,7 @@
   },
   "not_found": [
     "Seems like you went to far...",
-    "Il n'y a rien a voir par ici...",
+    "Nothing to see around here...",
     "You won't find your exams answers here sorry...",
     "Seems like the page you looked for doesn't exist"
   ],
