refactor(name): revert iseplife name

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -83,7 +83,7 @@
   "cgu_accept": "Accepter",
   "cgu_deny": "Refuser",
   "cgu_open": "Consulter",
-  "cgu_text": "To use iseplife, you need to accept our EULA.",
+  "cgu_text": "To use isIsepLifeeplife, you need to accept our EULA.",
   "cgu": "EULA",
   "block": "Block",
   "unblock": "Unlock"
