--- a/src/translations/fr/error.json
+++ b/src/translations/fr/error.json
@@ -12,7 +12,7 @@
     "Le code a planté comme Mazepin...",
     "Une erreur a été rencontrée...",
     "Bon bah ca n'a pas marché...",
-    "Un problème a été rencontré (source: code de merde)"
+    "Un problème a été rencontré (source: code douteux)"
   ],
   "maintenance": {
     "title":"Aucune connexion aux serveurs",
