feat(lightbox): impl download on app

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -87,5 +87,6 @@
   "cgu_text": "To use IsepLife, you need to accept our EULA.",
   "cgu": "EULA",
   "block": "Block",
-  "unblock": "Unlock"
+  "unblock": "Unlock",
+  "update": "Please update the app on the store to download images"
 }
