--- a/src/translations/en/gallery.json
+++ b/src/translations/en/gallery.json
@@ -32,5 +32,6 @@
   "see_all": "See all",
   "failed_download": "Failed to download the image",
   "downloading": "Downloading...",
-  "see_events": "See events"
+  "see_events": "See events",
+  "saved": "Saved to gallery."
 }
