--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -32,5 +32,6 @@
   "see_all": "Voir tout",
   "failed_download": "Echec du téléchargement de l'image",
   "downloading": "Téléchargement...",
-  "see_events": "Voir les événements"
+  "see_events": "Voir les événements",
+  "saved": "Image sauvegardée."
 }
