feat(post): add error message looking for a deleted post

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -28,5 +28,6 @@
 	"copied": "Linked copied into clipboard !",
 	"video_not_editable": "Videos are not editable.",
 	"report": "Report",
-	"reported": "You just reported this post to the administrators, it will be reviewed in 24h"
+	"reported": "You just reported this post to the administrators, it will be reviewed in 24h",
+	"post_deleted" : "This post has been deleted"
 }
