--- a/src/translations/fr/error.json
+++ b/src/translations/fr/error.json
@@ -3,7 +3,7 @@
   "error_fetch_event": "Une erreur est survenue lors du chargement de l'événement.",
   "error_fetch_ior": "Une erreur est survenue lors du chargement de la session.",
   "apologize": "Désolé",
-  "working_on_it": "Nous avons été notifié de l'erreur et travaillons sur sa resolution",
+  "working_on_it": "Nous avons été notifié de l'erreur et travaillons sur sa résolution.",
   "online": "De nouveau connecté !",
   "offline": "Connexion interrompue",
   "user_disconnected": "Vous avez été déconnecté",
