feat(clubs): refresh UI of the clubs members view

--- a/src/translations/fr/club.json
+++ b/src/translations/fr/club.json
@@ -32,5 +32,5 @@
     "MEMBER": "Membre"
   },
   "member_created": "Membre ajouté",
-  "member_updated": "Member modifié"
+  "member_updated": "Membre enregistré"
 }
