fix(translation): add translation in post form

--- a/src/translations/en/gallery.json
+++ b/src/translations/en/gallery.json
@@ -33,5 +33,6 @@
   "failed_download": "Failed to download the image",
   "downloading": "Downloading...",
   "see_events": "See events",
-  "saved": "Saved to gallery."
+  "saved": "Saved to gallery.",
+  "edition_from_post": "Edition of a gallery is not possible from a post."
 }
