--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -33,5 +33,6 @@
   "failed_download": "Echec du téléchargement de l'image",
   "downloading": "Téléchargement...",
   "see_events": "Voir les événements",
-  "saved": "Image sauvegardée."
+  "saved": "Image sauvegardée.",
+  "edition_from_post": "L'édition d'une galerie n'est pas possible depuis un post."
 }
