feat(gallery): new gallery preview ui

--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -34,5 +34,6 @@
   "downloading": "Téléchargement...",
   "see_events": "Voir les événements",
   "saved": "Image sauvegardée.",
-  "edition_from_post": "L'édition d'une galerie n'est pas possible depuis un post."
+  "edition_from_post": "L'édition d'une galerie n'est pas possible depuis un post.",
+  "see_pictures": "Voir les photos"
 }
