--- a/src/translations/en/gallery.json
+++ b/src/translations/en/gallery.json
@@ -34,5 +34,6 @@
   "downloading": "Downloading...",
   "see_events": "See events",
   "saved": "Saved to gallery.",
-  "edition_from_post": "Edition of a gallery is not possible from a post."
+  "edition_from_post": "Edition of a gallery is not possible from a post.",
+  "see_pictures": "See pictures"
 }
